--- a/MI_Data.html
+++ b/MI_Data.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Introduction to multiplex single-cell imaging data</title>
+<title>Data</title>
 
 <script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -33,6 +33,7 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-6.2.1/css/all.min.css" rel="stylesheet" />
@@ -221,6 +222,9 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
+<style type="text/css">
+.code-folding-btn { margin-bottom: 4px; }
+</style>
 
 
 
@@ -368,196 +372,29 @@ div.tocify {
 
 <div id="header">
 
-
-
-<h1 class="title toc-ignore">Introduction to multiplex single-cell
-imaging data</h1>
-
-</div>
-
-
-<div id="slide-deck" class="section level2">
-<h2>Slide Deck</h2>
-<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/19588e79e83146a8bc844ed2f335c79e" title="MI_intro" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586">
-</iframe>
-</div>
-<div id="overview" class="section level2">
-<h2>Overview</h2>
-<p>Below I briefly talk about loading and visualizing raw TIFF data. The
-rest of the workshop will focus on data in tabular form post
-segmentation.</p>
-<div id="lung-cancer-data" class="section level3">
-<h3>Lung cancer data</h3>
-<p>Below I do some exploratory data analysis with multichannel tiff
-files from a Vectra instrument. We are looking at a tissue slice from a
-patient with non small cell lung carcinoma from one of the datasets
-available in the <code>VectraPolarisData</code> package.</p>
-<p>Cell and tissue segmentation and cell phenotyping were performed
-using inForm software. For each image, there are multiple Tiff
-files:</p>
-<ul>
-<li><code>*component_data.tif</code>: the multichannel file we are most
-interested in</li>
-<li><code>*binary_sig*</code>: 3 channel file with binary segmentation
-maps</li>
-<li><code>"subject_id".tif</code>: A composite image in RGB format.
-Makes pretty pictures.</li>
+<div class="btn-group pull-right float-right">
+<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
+<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
+<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
 </ul>
-<pre class="r"><code>
-#BiocManager::install(&quot;EBImage&quot;)
-
-# load relevant libraries
-library(tidyverse)
-library(tiff)
-library(EBImage)
-## 
-## Attaching package: &#39;EBImage&#39;
-## The following object is masked from &#39;package:purrr&#39;:
-## 
-##     transpose
-
-
-# define your specific file path
-my_path = here::here(&quot;DataCode&quot;)
-
-# define file for different .tif files
-component = paste0(my_path, &quot;/&quot;, &quot;#16 3-171-807_[62243,18509]_component_data.tif&quot;)
-binseg = paste0(my_path, &quot;/&quot;, &quot;#16 3-171-807_[62243,18509]_binary_seg_maps.tif&quot;)
-composite_tif = paste0(my_path, &quot;/&quot;, &quot;#16 3-171-807_[62243,18509].tif&quot;)</code></pre>
-<p>The subject and image ID are embedded in the file name. For example,
-for the file “#12 2-690-981 P44_[48428,17215].tif”, “12 2-690-981” is
-the subject id, and “48428,17215” is the image ID.</p>
-<div id="component-file" class="section level4">
-<h4>Component file</h4>
-<p>The <code>component.tif</code> file contains the multichannel tiff,
-which is a stack 0f individual images (one for each marker). Below I
-define a function to read the component file and extract metadata.</p>
-<pre class="r"><code># this function is from phenoptr package on GitHub
-# extracts metadata specific to Vectra3/VectraPolaris images
-read_components &lt;- function(path) {
-  stopifnot(file.exists(path), endsWith(path, &#39;component_data.tif&#39;))
-
-  # The readTIFF documentation for `as.is`` is misleading.
-  # To read actual float values for components, we want `as.is=FALSE`.
-  tif = tiff::readTIFF(path, all=TRUE, info=TRUE)
-
-  # Get the image descriptions and figure out which ones are components
-  infos = purrr::map_chr(tif, ~attr(., &#39;description&#39;))
-  images = grepl(&#39;FullResolution&#39;, infos)
-
-  # Get the component names
-  names = stringr::str_match(infos[images], &#39;&lt;Name&gt;(.*)&lt;/Name&gt;&#39;)[, 2]
-
-  purrr::set_names(tif[images], names)
-}
-
-image_stack = read_components(component)</code></pre>
-<p>The <code>image_stack</code> object is now a list, where each list
-element is a different marker</p>
-<pre class="r"><code>map(image_stack, dim)
-## $`CD19 (Opal 650)`
-## [1] 1008 1348
-## 
-## $`CD3 (Opal 520)`
-## [1] 1008 1348
-## 
-## $`CD14 (Opal 540)`
-## [1] 1008 1348
-## 
-## $`CD8 (Opal 620)`
-## [1] 1008 1348
-## 
-## $`HLADR (Opal 690)`
-## [1] 1008 1348
-## 
-## $`CK (Opal 570)`
-## [1] 1008 1348
-## 
-## $`DAPI (DAPI)`
-## [1] 1008 1348
-## 
-## $Autofluorescence
-## [1] 1008 1348</code></pre>
-<p>I can use the <code>display()</code> function from the
-<code>EBImage</code> package to plot an individual channel. Below the
-DAPI (nucleus) channel is plotted.</p>
-<pre class="r"><code>dapi_channel = t(image_stack$&quot;DAPI (DAPI)&quot;)
-EBImage::display(dapi_channel, method = &quot;raster&quot;)</code></pre>
-<p><img src="MI_intro_files/figure-html/unnamed-chunk-5-1.png" width="90%" /></p>
-<pre class="r"><code>
-
-# plot the image in a specified color
-dapi = rgbImage(blue=.1*dapi_channel, red = .02 * dapi_channel)
-display(dapi, method = &quot;raster&quot;)</code></pre>
-<p><img src="MI_intro_files/figure-html/unnamed-chunk-5-2.png" width="90%" /></p>
 </div>
-<div id="segmentation-files" class="section level4">
-<h4>Segmentation files</h4>
-<p>This data was collected on a Vectra 3 instrument and segmented using
-<a
-href="https://www.akoyabio.com/phenoimager/software/inform-tissue-finder/">inForm</a>
-tissue analysis software from Akoya Biosciences. This is proprietary
-image analysis software that can perform cell and tissue segmentation
-and cell phenotyping. The segmentation below were performed by that
-software.</p>
-<pre class="r"><code># source phenoptr code for loading file and metadata, based on tiff::readTIFF.
-source(&quot;https://raw.githubusercontent.com/akoyabio/phenoptr/main/R/read_maps.R&quot;)
 
-segmentations = read_maps(binseg)
-names(segmentations)
-## [1] &quot;Nucleus&quot;  &quot;Membrane&quot; &quot;Tissue&quot;</code></pre>
-<p>Nucleus segmentation</p>
-<pre class="r"><code>nucleus = segmentations[[&#39;Nucleus&#39;]]
-plot(as.raster(nucleus, max = max(nucleus)))</code></pre>
-<p><img src="MI_intro_files/figure-html/unnamed-chunk-7-1.png" width="90%" /></p>
-<p>Tissue segmentation</p>
-<pre class="r"><code>tissue = segmentations[[&#39;Tissue&#39;]]
 
-plot(as.raster(tissue, max = max(tissue)))</code></pre>
-<p><img src="MI_intro_files/figure-html/unnamed-chunk-8-1.png" width="90%" /></p>
-</div>
-<div id="composite-file" class="section level4">
-<h4>Composite file</h4>
-<pre class="r"><code># source phenoptr code for loading file and metadata, based on tiff::readTIFF.
-source(&quot;https://raw.githubusercontent.com/akoyabio/phenoptr/main/R/read_composites.R&quot;)
 
-composite = read_composites(composite_tif)</code></pre>
-<pre class="r"><code>composite = as.raster(composite[[1]])
-plot(composite)</code></pre>
-<p><img src="MI_intro_files/figure-html/unnamed-chunk-10-1.png" width="90%" /></p>
+<h1 class="title toc-ignore">Data</h1>
+
 </div>
+
+
+<p>Two datasets will be used in the short course. They are below with
+brief descriptions.</p>
+<div id="ovarian-cancer" class="section level2">
+<h2>Ovarian cancer</h2>
+<p>DESCRIPTION AND DATA TO COME.</p>
 </div>
-</div>
-<div id="references" class="section level2">
-<h2>References</h2>
-<p>Below are original citations for the two example datasets I will be
-working with in this tutorial.</p>
-<ul>
-<li><a
-href="https://aacrjournals.org/mcr/article/19/12/1973/675069/The-Spatial-Context-of-Tumor-Infiltrating-Immune">Paper
-for ovarian cancer data</a></li>
-<li><a href="https://pubmed.ncbi.nlm.nih.gov/34048945/">Paper for
-non-small cell lung carcinoma data</a></li>
-</ul>
-<p>Resources from Akoya Biosciences on working with this data</p>
-<ul>
-<li><a href="https://akoyabio.github.io/phenoptr/">phenoptr R
-package</a></li>
-</ul>
-<p>Below are some references that review this rapidly growing area.</p>
-<ul>
-<li><a
-href="https://link.springer.com/protocol/10.1007/978-1-0716-2986-4_8">textbook
-chapter, Wrobel and Vandekar</a></li>
-<li><a href="https://www.mdpi.com/2072-6694/13/12/3031">Challenges and
-Opportunities in the Statistical Analysis of Multiplex
-Immunofluorescence Data</a></li>
-<li><a
-href="https://www.nature.com/articles/s41592-022-01428-z">Catching up
-with multiplexed tissue imaging</a></li>
-<li><a href="https://www.nature.com/articles/s41576-022-00515-3">The
-emerging landscape of spatial profiling technologies</a></li>
-</ul>
+<div id="lung-cancer" class="section level2">
+<h2>Lung cancer</h2>
 </div>
 
 
@@ -595,6 +432,11 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
+<script>
+$(document).ready(function () {
+  window.initializeCodeFolding("hide" === "show");
+});
+</script>
 
 <script>
 $(document).ready(function ()  {
