--- a/MI_VectraPolarisData.html
+++ b/MI_VectraPolarisData.html
@@ -13,7 +13,7 @@
 
 <title>VectraPolarisData: experiment-scale multiplex imaging data</title>
 
-<script src="site_libs/header-attrs-2.20/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -35,8 +35,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.2.1/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.2.1/css/v4-shims.min.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -316,7 +316,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">ICAMPAM 2017</a>
+      <a class="navbar-brand" href="index.html">Analysis of multiplex single-cell imaging data in R</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -331,22 +331,22 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="shortcourse_data.html">Data Download (provide .Rdata small version of dataset and 1-2 real images)</a>
+      <a href="MI_Data.html">Data Download</a>
     </li>
     <li>
       <a href="MI_intro.html">Background on multiplex single-cell imaging</a>
     </li>
     <li>
-      <a href="shortcourse_fpca.html">VectraPolarisData package and EDA</a>
+      <a href="MI_VectraPolarisData.html">VectraPolarisData package</a>
     </li>
     <li>
-      <a href="shortcourse_sofr.html">Segmentation, phenotyping, and batch correction</a>
+      <a href="MI_normalization.html">Segmentation, normalization, and phenotyping</a>
     </li>
     <li>
-      <a href="shortcourse_fosr.html">Spatial analysis approaches</a>
+      <a href="MI_spatialAnalysis.html">Extracting spatial summary statistics</a>
     </li>
     <li>
-      <a href="shortcourse_fosr.html">Functional data analysis approaches</a>
+      <a href="MI_fda.html">Modeling patient-level outcomes</a>
     </li>
   </ul>
 </li>
@@ -356,7 +356,7 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="http://github.com/jeff-goldsmith/ICAMPAM">
+  <a href="http://juliawrobel.com/MI_tutorial/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -376,16 +376,6 @@ multiplex imaging data</h1>
 </div>
 
 
-<pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-## ✔ dplyr     1.1.1     ✔ readr     2.1.4
-## ✔ forcats   1.0.0     ✔ stringr   1.5.0
-## ✔ ggplot2   3.4.1     ✔ tibble    3.2.1
-## ✔ lubridate 1.9.2     ✔ tidyr     1.3.0
-## ✔ purrr     1.0.1     
-## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-## ✖ dplyr::filter() masks stats::filter()
-## ✖ dplyr::lag()    masks stats::lag()
-## ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors</code></pre>
 <div id="slide-deck" class="section level2">
 <h2>Slide Deck</h2>
 <iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/5573ed99b24a464885bbbab47af138d5" title="MI_VectraPolarisData" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586">
@@ -516,8 +506,11 @@ cell_level_ovarian &lt;- as.data.frame(cbind(colData_df,
                 pstat3 = p_stat3_opal_570,
                 ck = ck_opal_780,
                 ki67 = ki67_opal_690) %&gt;%
+  # define cell type &#39;immune&#39;
+  mutate(immune = ifelse(phenotype_cd19 == &quot;CD19+&quot; | phenotype_cd8 == &quot;CD8+&quot; |
+              phenotype_cd3 == &quot;CD3+&quot; | phenotype_cd68 == &quot;CD68+&quot;, &quot;immune&quot;, &quot;other&quot;)) %&gt;%
   dplyr::select(contains(&quot;id&quot;), tissue_category, contains(&quot;phenotype&quot;),
-                contains(&quot;position&quot;), ck:dapi) %&gt;%
+                contains(&quot;position&quot;), ck:dapi, immune) %&gt;%
   # only retain 128 subjects who have clinical data (other 4 are controls)
   dplyr::filter(sample_id %in% patient_level_ovarian$sample_id)
 
@@ -649,9 +642,15 @@ lung_df %&gt;%
 <h2>Data saving</h2>
 <p>Processed data are saved as <code>.rda</code> objects and can also be
 downloaded directly from the short course website.</p>
-<pre class="r"><code># save ovarian data
+<pre class="r"><code># save data sets
 save(ovarian_df, file = here::here(&quot;DataCode&quot;, &quot;ovarian.RDA&quot;))
-save(lung_df, file = here::here(&quot;DataCode&quot;, &quot;lung.RDA&quot;))</code></pre>
+save(lung_df, file = here::here(&quot;DataCode&quot;, &quot;lung.RDA&quot;))
+
+# load processed ovarian data
+load(file = here::here(&quot;DataCode&quot;, &quot;ovarian.RDA&quot;))
+
+# load processed lung data
+load(file = here::here(&quot;DataCode&quot;, &quot;lung.RDA&quot;))</code></pre>
 </div>
 <div id="references" class="section level2">
 <h2>References</h2>
