--- a/MI_normalization.html
+++ b/MI_normalization.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Introduction to multiplex single-cell imaging data</title>
+<title>Statistical image processing: segmentation, phenotyping, and normalization</title>
 
 <script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -370,181 +370,216 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Introduction to multiplex single-cell
-imaging data</h1>
+<h1 class="title toc-ignore">Statistical image processing: segmentation,
+phenotyping, and normalization</h1>
 
 </div>
 
 
 <div id="slide-deck" class="section level2">
 <h2>Slide Deck</h2>
-<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/19588e79e83146a8bc844ed2f335c79e" title="MI_intro" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586">
+<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/ccecd0548b874505b4bdd80172769ffe" title="MI_normalization" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586">
 </iframe>
 </div>
-<div id="overview" class="section level2">
-<h2>Overview</h2>
-<p>Below I briefly talk about loading and visualizing raw TIFF data. The
-rest of the workshop will focus on data in tabular form post
-segmentation.</p>
-<div id="lung-cancer-data" class="section level3">
-<h3>Lung cancer data</h3>
-<p>Below I do some exploratory data analysis with multichannel tiff
-files from a Vectra instrument. We are looking at a tissue slice from a
-patient with non small cell lung carcinoma from one of the datasets
-available in the <code>VectraPolarisData</code> package.</p>
-<p>Cell and tissue segmentation and cell phenotyping were performed
-using inForm software. For each image, there are multiple Tiff
-files:</p>
-<ul>
-<li><code>*component_data.tif</code>: the multichannel file we are most
-interested in</li>
-<li><code>*binary_sig*</code>: 3 channel file with binary segmentation
-maps</li>
-<li><code>"subject_id".tif</code>: A composite image in RGB format.
-Makes pretty pictures.</li>
-</ul>
+<div id="normalization" class="section level2">
+<h2>Normalization</h2>
+<p>As an illustrative example will use the <code>mxnorm</code> package
+to normalize the lung data.</p>
+<div id="setting-up-mx_dataset-object" class="section level3">
+<h3>Setting up <code>mx_dataset</code> object</h3>
+<p>Use <code>slide_id</code> as slide identifier - Use
+<code>sample_id</code> as image identifier - Use the following marker
+columns: - <code>cd19</code> - <code>cd14</code> - <code>cd3</code> -
+<code>cd8</code> - <code>hladr</code> - <code>ck</code> -
+<code>dapi</code> - Use <code>tissue_category</code> as a metadata
+column</p>
 <pre class="r"><code>
-#BiocManager::install(&quot;EBImage&quot;)
+mx_data = mx_dataset(data = cell_level_lung,
+                     slide_id = &quot;slide_id&quot;,
+                     image_id = &quot;sample_id&quot;,
+                     marker_cols = c(&quot;cd19&quot;,
+                                     &quot;cd3&quot;,
+                                     &quot;cd14&quot;,
+                                     &quot;cd8&quot;,
+                                     &quot;hladr&quot;,
+                                     &quot;ck&quot;,
+                                     &quot;dapi&quot;
+                                     ),
+                     metadata_cols = c(&quot;tissue_category&quot;, &quot;phenotype_ck&quot;, &quot;phenotype_cd8&quot;, &quot;phenotype_cd14&quot;,
+                                       &quot;phenotype_other&quot;, &quot;phenotype_cd19&quot;))
 
-# load relevant libraries
-library(tidyverse)
-library(tiff)
-library(EBImage)
-## 
-## Attaching package: &#39;EBImage&#39;
-## The following object is masked from &#39;package:purrr&#39;:
-## 
-##     transpose
 
 
-# define your specific file path
-my_path = here::here(&quot;DataCode&quot;)
-
-# define file for different .tif files
-component = paste0(my_path, &quot;/&quot;, &quot;#16 3-171-807_[62243,18509]_component_data.tif&quot;)
-binseg = paste0(my_path, &quot;/&quot;, &quot;#16 3-171-807_[62243,18509]_binary_seg_maps.tif&quot;)
-composite_tif = paste0(my_path, &quot;/&quot;, &quot;#16 3-171-807_[62243,18509].tif&quot;)</code></pre>
-<p>The subject and image ID are embedded in the file name. For example,
-for the file “#12 2-690-981 P44_[48428,17215].tif”, “12 2-690-981” is
-the subject id, and “48428,17215” is the image ID.</p>
-<div id="component-file" class="section level4">
-<h4>Component file</h4>
-<p>The <code>component.tif</code> file contains the multichannel tiff,
-which is a stack 0f individual images (one for each marker). Below I
-define a function to read the component file and extract metadata.</p>
-<pre class="r"><code># this function is from phenoptr package on GitHub
-# extracts metadata specific to Vectra3/VectraPolaris images
-read_components &lt;- function(path) {
-  stopifnot(file.exists(path), endsWith(path, &#39;component_data.tif&#39;))
-
-  # The readTIFF documentation for `as.is`` is misleading.
-  # To read actual float values for components, we want `as.is=FALSE`.
-  tif = tiff::readTIFF(path, all=TRUE, info=TRUE)
-
-  # Get the image descriptions and figure out which ones are components
-  infos = purrr::map_chr(tif, ~attr(., &#39;description&#39;))
-  images = grepl(&#39;FullResolution&#39;, infos)
-
-  # Get the component names
-  names = stringr::str_match(infos[images], &#39;&lt;Name&gt;(.*)&lt;/Name&gt;&#39;)[, 2]
-
-  purrr::set_names(tif[images], names)
-}
-
-image_stack = read_components(component)</code></pre>
-<p>The <code>image_stack</code> object is now a list, where each list
-element is a different marker</p>
-<pre class="r"><code>map(image_stack, dim)
-## $`CD19 (Opal 650)`
-## [1] 1008 1348
-## 
-## $`CD3 (Opal 520)`
-## [1] 1008 1348
-## 
-## $`CD14 (Opal 540)`
-## [1] 1008 1348
-## 
-## $`CD8 (Opal 620)`
-## [1] 1008 1348
-## 
-## $`HLADR (Opal 690)`
-## [1] 1008 1348
-## 
-## $`CK (Opal 570)`
-## [1] 1008 1348
-## 
-## $`DAPI (DAPI)`
-## [1] 1008 1348
-## 
-## $Autofluorescence
-## [1] 1008 1348</code></pre>
-<p>I can use the <code>display()</code> function from the
-<code>EBImage</code> package to plot an individual channel. Below the
-DAPI (nucleus) channel is plotted.</p>
-<pre class="r"><code>dapi_channel = t(image_stack$&quot;DAPI (DAPI)&quot;)
-EBImage::display(dapi_channel, method = &quot;raster&quot;)</code></pre>
-<p><img src="MI_intro_files/figure-html/unnamed-chunk-5-1.png" width="90%" /></p>
-<pre class="r"><code>
-
-# plot the image in a specified color
-dapi = rgbImage(blue=.1*dapi_channel, red = .02 * dapi_channel)
-display(dapi, method = &quot;raster&quot;)</code></pre>
-<p><img src="MI_intro_files/figure-html/unnamed-chunk-5-2.png" width="90%" /></p>
+summary(mx_data)</code></pre>
+<p>And let’s look at the data object we’re going to use going
+forward:</p>
+<pre class="r"><code>knitr::kable(head(mx_data$data))  %&gt;%
+    kableExtra::kable_styling() %&gt;% kableExtra::scroll_box(width = &quot;100%&quot;)</code></pre>
 </div>
-<div id="segmentation-files" class="section level4">
-<h4>Segmentation files</h4>
-<p>This data was collected on a Vectra 3 instrument and segmented using
-<a
-href="https://www.akoyabio.com/phenoimager/software/inform-tissue-finder/">inForm</a>
-tissue analysis software from Akoya Biosciences. This is proprietary
-image analysis software that can perform cell and tissue segmentation
-and cell phenotyping. The segmentation below were performed by that
-software.</p>
-<pre class="r"><code># source phenoptr code for loading file and metadata, based on tiff::readTIFF.
-source(&quot;https://raw.githubusercontent.com/akoyabio/phenoptr/main/R/read_maps.R&quot;)
+<div id="normalize-using-mx_normalize" class="section level3">
+<h3>Normalize using <code>mx_normalize()</code></h3>
+<p>Normalize using two methods: <code>log10</code>, and
+<code>mean_divide</code>. Then, calculate Otsu discordance metrics.</p>
+<pre class="r"><code>mx_norm = mx_normalize(mx_data,
+                       transform = &quot;log10_mean_divide&quot;,
+                       method = &quot;None&quot;)
 
-segmentations = read_maps(binseg)
-names(segmentations)
-## [1] &quot;Nucleus&quot;  &quot;Membrane&quot; &quot;Tissue&quot;</code></pre>
-<p>Nucleus segmentation</p>
-<pre class="r"><code>nucleus = segmentations[[&#39;Nucleus&#39;]]
-plot(as.raster(nucleus, max = max(nucleus)))</code></pre>
-<p><img src="MI_intro_files/figure-html/unnamed-chunk-7-1.png" width="90%" /></p>
-<p>Tissue segmentation</p>
-<pre class="r"><code>tissue = segmentations[[&#39;Tissue&#39;]]
 
-plot(as.raster(tissue, max = max(tissue)))</code></pre>
-<p><img src="MI_intro_files/figure-html/unnamed-chunk-8-1.png" width="90%" /></p>
-</div>
-<div id="composite-file" class="section level4">
-<h4>Composite file</h4>
-<pre class="r"><code># source phenoptr code for loading file and metadata, based on tiff::readTIFF.
-source(&quot;https://raw.githubusercontent.com/akoyabio/phenoptr/main/R/read_composites.R&quot;)
+# Otsu
+mx_norm = run_otsu_discordance(mx_norm,
+                            table=&quot;both&quot;,
+                            thresold_override=NULL,
+                            plot_out = FALSE)
 
-composite = read_composites(composite_tif)</code></pre>
-<pre class="r"><code>composite = as.raster(composite[[1]])
-plot(composite)</code></pre>
-<p><img src="MI_intro_files/figure-html/unnamed-chunk-10-1.png" width="90%" /></p>
+# umap
+mx_norm = run_reduce_umap(mx_norm,
+                          table=&quot;both&quot;,
+                          marker_list = mx_data$marker_cols,
+                          downsample_pct = .1,
+                          metadata_cols = mx_data$metadata_cols)
+</code></pre>
+<p>Summary table that calculates the metrics from the Bioinformatics
+paper is printed below</p>
+<pre class="r"><code># calculate metrics for unnormalized and normalized data
+summary(mx_norm)</code></pre>
+</div>
+<div id="plotting" class="section level3">
+<h3>Plotting</h3>
+<p>First, density plots. Only showing density plots for unnormalized
+cells for two types of immune markers and 3 subjects.</p>
+<pre class="r"><code>set.seed(103001)
+ids = sample(unique(cell_level_lung$slide_id), 3)
+markers = c(&quot;cd19&quot;, &quot;cd14&quot;)
+mx_df = mx_data$data %&gt;%
+  pivot_longer(cd19:dapi, names_to = &quot;marker&quot;, values_to = &quot;marker_value&quot;) %&gt;%
+  filter(slide_id %in% ids)
+  
+  
+cd14 = mx_df %&gt;% 
+    filter(marker %in% c(&quot;cd14&quot;)) %&gt;%
+    ggplot() +
+  geom_line(stat = &quot;density&quot;, aes(marker_value, group = sample_id, color = slide_id), 
+            alpha=0.5, linetype = 2) +
+    geom_density(aes(marker_value, group = slide_id,
+                   color = slide_id), size = 1.25) +
+  scale_color_viridis(discrete = TRUE) +
+  facet_wrap(~marker, scales = &quot;free&quot;, ncol = 1) +
+  theme(legend.position = &quot;none&quot;) +
+  xlim(0, 1) +
+  labs(x = &quot;&quot;)
+
+
+cd19 = mx_df %&gt;%
+  filter(marker %in% c(&quot;cd19&quot;)) %&gt;%
+  ggplot() +
+  geom_line(stat = &quot;density&quot;, aes(marker_value, group = sample_id, color = slide_id), 
+            alpha=0.5, linetype = 2) +
+    geom_density(aes(marker_value, group = slide_id,
+                   color = slide_id), size = 1.25) +
+  scale_color_viridis(discrete = TRUE) +
+  facet_wrap(~marker, scales = &quot;free&quot;, ncol = 1) +
+  theme(legend.position = &quot;none&quot;) +
+  xlim(0, 0.5) +
+  labs(x = &quot;marker value&quot;)
+
+cd14 / cd19</code></pre>
+<p>Discordance plots. Show for subset of markers and maybe subset of
+subjects.</p>
+<pre class="r"><code>set.seed(103001)
+ids = sample(unique(cell_level_lung$slide_id), 15)
+
+otsu_data = mx_norm$otsu_data %&gt;%
+  filter(marker %in% c(&quot;cd14&quot;, &quot;cd19&quot;, &quot;cd8&quot;, &quot;cd3&quot;, &quot;dapi&quot;, &quot;ck&quot;),
+         slide_id %in% ids) %&gt;%
+  mutate(slide_id = as.numeric(factor(slide_id)),
+         norm = factor(table, levels = c(&quot;raw&quot;, &quot;normalized&quot;))) 
+
+point_size = 2
+    
+
+mean_vals = otsu_data %&gt;% 
+  group_by(norm, slide_id) %&gt;% 
+  summarize(m1 = mean(discordance_score), .groups = &quot;drop&quot;)
+        
+
+otsu_data %&gt;%
+  ggplot() + 
+  geom_point(aes(discordance_score, slide_id, color = marker), size = point_size) +
+  facet_wrap(~ norm) +
+  geom_point(data = mean_vals, aes(m1, slide_id), color = &quot;black&quot;, fill = &quot;white&quot;, 
+             shape = 23, size = point_size) +
+  labs(x = &quot;discordance score&quot;, y = &quot;slide_id&quot;)
+</code></pre>
+<pre class="r"><code>rm(mx_data, mean_vals, otsu_data, discordance_score, ids, markers, point_size, mx_df)
+## Warning in rm(mx_data, mean_vals, otsu_data, discordance_score, ids, markers, :
+## object &#39;mx_data&#39; not found
+## Warning in rm(mx_data, mean_vals, otsu_data, discordance_score, ids, markers, :
+## object &#39;mean_vals&#39; not found
+## Warning in rm(mx_data, mean_vals, otsu_data, discordance_score, ids, markers, :
+## object &#39;otsu_data&#39; not found
+## Warning in rm(mx_data, mean_vals, otsu_data, discordance_score, ids, markers, :
+## object &#39;discordance_score&#39; not found
+## Warning in rm(mx_data, mean_vals, otsu_data, discordance_score, ids, markers, :
+## object &#39;ids&#39; not found
+## Warning in rm(mx_data, mean_vals, otsu_data, discordance_score, ids, markers, :
+## object &#39;markers&#39; not found
+## Warning in rm(mx_data, mean_vals, otsu_data, discordance_score, ids, markers, :
+## object &#39;point_size&#39; not found
+## Warning in rm(mx_data, mean_vals, otsu_data, discordance_score, ids, markers, :
+## object &#39;mx_df&#39; not found</code></pre>
 </div>
 </div>
+<div id="phenotyping" class="section level2">
+<h2>Phenotyping</h2>
+<p>Add in phenograph plots. Clustering using normalized marker values
+for a single subject.</p>
+<p>Now using normalized marker values</p>
+<pre class="r"><code>norm_df = mx_norm$norm_data %&gt;%
+  filter(slide_id == &quot;#01 0-889-121&quot;) %&gt;%
+  dplyr::select(cd19, cd3, cd14, cd8, ck, contains(&quot;phenotype&quot;)) %&gt;%
+  mutate(phenotype = case_when(
+    phenotype_cd14 == &quot;CD14+&quot; ~ &quot;CD14+&quot;,
+    phenotype_cd19 == &quot;CD19+&quot; ~ &quot;CD19+&quot;,
+    phenotype_cd8 == &quot;CD8+&quot; ~ &quot;CD8+&quot;,
+    phenotype_ck == &quot;CK+&quot; ~ &quot;CK+&quot;,
+    TRUE ~ &quot;other&quot;
+  ))
+  
+
+norm_df = na.omit(norm_df)
+norm_df_mat = as.matrix(norm_df[, 1:5])
+
+
+# tsne 
+set.seed(234232)
+tsne_results = Rtsne(norm_df_mat, dims = 2,check_duplicates = FALSE)
+norm_df$tsne1 = tsne_results$Y[,1]  
+norm_df$tsne2 = tsne_results$Y[,2]
+
+# phenograph
+phen_results = Rphenograph(norm_df_mat, k = 100)
+norm_df$phenograph_cluster &lt;- factor(membership(phen_results[[2]]))
+</code></pre>
+<pre class="r"><code>Number of clusters normalize is `r length(unique(norm_df$phenograph_cluster))`</code></pre>
+<p>Plotted results for unnormalized phenograph labels, normalized
+phenograph labels, and Inform labels.</p>
+<pre class="r"><code>p1 = norm_df %&gt;%
+  ggplot(aes(tsne1, tsne2, color = phenotype)) +
+  geom_point(alpha = 0.5, size = 0.75) +
+  labs(x = &quot;TSNE 1&quot;, y = &quot;TSNE 2&quot;, title = &quot;Inform&quot;) +
+  theme(legend.position = c(.1, .25),
+        legend.title = element_blank())
+
+p2 = norm_df %&gt;%
+  ggplot(aes(tsne1, tsne2, color = phenograph_cluster)) +
+  geom_point(alpha = 0.5, size = 0.75) +
+  labs(x = &quot;TSNE 1&quot;, y = &quot;&quot;, title = &quot;Phenograph&quot;) +
+  theme(legend.position = &quot;none&quot;)
+
+p1 + p2 </code></pre>
 </div>
 <div id="references" class="section level2">
 <h2>References</h2>
-<p>Below are original citations for the two example datasets I will be
-working with in this tutorial.</p>
-<ul>
-<li><a
-href="https://aacrjournals.org/mcr/article/19/12/1973/675069/The-Spatial-Context-of-Tumor-Infiltrating-Immune">Paper
-for ovarian cancer data</a></li>
-<li><a href="https://pubmed.ncbi.nlm.nih.gov/34048945/">Paper for
-non-small cell lung carcinoma data</a></li>
-</ul>
-<p>Resources from Akoya Biosciences on working with this data</p>
-<ul>
-<li><a href="https://akoyabio.github.io/phenoptr/">phenoptr R
-package</a></li>
-</ul>
-<p>Below are some references that review this rapidly growing area.</p>
 <ul>
 <li><a
 href="https://link.springer.com/protocol/10.1007/978-1-0716-2986-4_8">textbook
@@ -552,12 +587,56 @@ chapter, Wrobel and Vandekar</a></li>
 <li><a href="https://www.mdpi.com/2072-6694/13/12/3031">Challenges and
 Opportunities in the Statistical Analysis of Multiplex
 Immunofluorescence Data</a></li>
-<li><a
-href="https://www.nature.com/articles/s41592-022-01428-z">Catching up
-with multiplexed tissue imaging</a></li>
-<li><a href="https://www.nature.com/articles/s41576-022-00515-3">The
-emerging landscape of spatial profiling technologies</a></li>
 </ul>
+<div id="segmentation" class="section level3">
+<h3>Segmentation</h3>
+<ul>
+<li><a href="https://pubmed.ncbi.nlm.nih.gov/34795433/">Mesmer deep
+learning based cell segmentation</a></li>
+<li><a
+href="https://www.nature.com/articles/s41598-022-08355-1">Two-stage
+R-CNN</a></li>
+<li><a
+href="https://genomebiology.biomedcentral.com/articles/10.1186/gb-2006-7-10-r100">Cell
+Profiler</a></li>
+<li><a href="https://www.ilastik.org/">ilastik</a></li>
+<li><a href="https://indicalab.com/halo/">Halo (proprietary)
+software</a></li>
+<li><a
+href="https://www.akoyabio.com/phenoimager/software/inform-tissue-finder/">inForm
+(proprietary) software</a></li>
+</ul>
+</div>
+<div id="phenotyping-1" class="section level3">
+<h3>Phenotyping</h3>
+<ul>
+<li><a
+href="https://www.sciencedirect.com/science/article/pii/S2405471221003355">Astir</a></li>
+<li><a
+href="https://bmcresnotes.biomedcentral.com/articles/10.1186/s13104-022-06097-x">Evaluation
+of clustering algorithms on Vectra and MIBI data</a></li>
+<li><a
+href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1008887">MAUI
+phenotyping for MIBI images</a></li>
+<li><a
+href="https://www.biorxiv.org/content/10.1101/2022.10.20.510630v1.full.pdf">CU-Anschutz
+pixel-based platform independent phenotyping</a></li>
+</ul>
+</div>
+<div id="normalization-1" class="section level3">
+<h3>Normalization</h3>
+<ul>
+<li><a
+href="https://www.nature.com/articles/s42003-022-03368-y">Python-based
+pipeline</a></li>
+<li><a
+href="https://joss.theoj.org/papers/10.21105/joss.04180.pdf">mxnorm
+package</a></li>
+<li><a
+href="https://academic.oup.com/bioinformatics/article/38/6/1700/6496920">Methods
+behind mxnorm</a></li>
+</ul>
+</div>
 </div>
 
 
