--- a/MI_spatialAnalysis.html
+++ b/MI_spatialAnalysis.html
@@ -13,7 +13,7 @@
 
 <title>Spatial analysis of multiplex imaging data</title>
 
-<script src="site_libs/header-attrs-2.20/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
@@ -35,8 +35,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.2.1/css/all.min.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-6.2.1/css/v4-shims.min.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -316,7 +316,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">ICAMPAM 2017</a>
+      <a class="navbar-brand" href="index.html">Analysis of multiplex single-cell imaging data in R</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -331,22 +331,22 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="shortcourse_data.html">Data Download (provide .Rdata small version of dataset and 1-2 real images)</a>
+      <a href="MI_Data.html">Data Download</a>
     </li>
     <li>
       <a href="MI_intro.html">Background on multiplex single-cell imaging</a>
     </li>
     <li>
-      <a href="shortcourse_fpca.html">VectraPolarisData package and EDA</a>
+      <a href="MI_VectraPolarisData.html">VectraPolarisData package</a>
     </li>
     <li>
-      <a href="shortcourse_sofr.html">Segmentation, phenotyping, and batch correction</a>
+      <a href="MI_normalization.html">Segmentation, normalization, and phenotyping</a>
     </li>
     <li>
-      <a href="shortcourse_fosr.html">Spatial analysis approaches</a>
+      <a href="MI_spatialAnalysis.html">Extracting spatial summary statistics</a>
     </li>
     <li>
-      <a href="shortcourse_fosr.html">Functional data analysis approaches</a>
+      <a href="MI_fda.html">Modeling patient-level outcomes</a>
     </li>
   </ul>
 </li>
@@ -356,7 +356,7 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="http://github.com/jeff-goldsmith/ICAMPAM">
+  <a href="http://juliawrobel.com/MI_tutorial/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -378,7 +378,7 @@ data</h1>
 
 <div id="slide-deck" class="section level2">
 <h2>Slide Deck</h2>
-<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/19588e79e83146a8bc844ed2f335c79e" title="MI_intro" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586">
+<iframe class="speakerdeck-iframe" frameborder="0" src="https://speakerdeck.com/player/034999f5e7844fb9a3e778d055b3bedc" title="MI_spatialAnalysis" allowfullscreen="true" style="border: 0px; background: padding-box padding-box rgba(0, 0, 0, 0.1); margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 314;" data-ratio="1.78343949044586">
 </iframe>
 </div>
 <div id="overview" class="section level2">
@@ -584,12 +584,17 @@ values =  RColorBrewer::brewer.pal(length(cell_types), &quot;Accent&quot;)
 df_spatialTIME &lt;- plot_immunoflo(df_spatialTIME, 
                    plot_title = &quot;sample_id&quot;,  mnames = cell_types,
                    cell_type = &quot;tissue_category&quot;)
-## Warning: `progress_estimated()` was deprecated in dplyr 1.0.0.
-## ℹ The deprecated feature was likely used in the spatialTIME package.
+## Warning: `progress_estimated()` was deprecated
+## in dplyr 1.0.0.
+## ℹ The deprecated feature was likely
+##   used in the spatialTIME package.
 ##   Please report the issue at
 ##   &lt;https://github.com/FridleyLab/spatialTIME/issues&gt;.
-## This warning is displayed once every 8 hours.
-## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
+## This warning is displayed once every 8
+## hours.
+## Call
+## `lifecycle::last_lifecycle_warnings()`
+## to see where this warning was
 ## generated.
 ## Warning in RColorBrewer::brewer.pal(length(mnames), &quot;Paired&quot;): minimal value for n is 3, returning requested palette with 3 different levels
 
