updated urls to processed data

--- a/MI_VectraPolarisData.html
+++ b/MI_VectraPolarisData.html
@@ -647,10 +647,10 @@ save(ovarian_df, file = here::here(&quot;DataCode&quot;, &quot;ovarian.RDA&quot;
 save(lung_df, file = here::here(&quot;DataCode&quot;, &quot;lung.RDA&quot;))
 
 # load processed ovarian data
-load(file = here::here(&quot;DataCode&quot;, &quot;ovarian.RDA&quot;))
+load(url(&quot;https://github.com/julia-wrobel/MI_tutorial/raw/main/DataCode/ovarian.RDA&quot;))
 
 # load processed lung data
-load(file = here::here(&quot;DataCode&quot;, &quot;lung.RDA&quot;))</code></pre>
+load(url(&quot;https://github.com/julia-wrobel/MI_tutorial/raw/main/DataCode/lung.RDA&quot;))</code></pre>
 </div>
 <div id="references" class="section level2">
 <h2>References</h2>
